feat: implement user-specific and thread notification delivery with preference handling
Signed-off-by: alyraafat <alewaraafat@gmail.com>